--- a/wordpress/compose.yaml
+++ b/wordpress/compose.yaml
@@ -1,28 +1,32 @@
-services:
+version: '3.9'
 
+services:
   wordpress:
-    image: wordpress
+    image: wordpress:latest
     restart: always
     ports:
-      - 8080:80
+      - "8080:80"
     environment:
       WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: exampleuser
-      WORDPRESS_DB_PASSWORD: examplepass
-      WORDPRESS_DB_NAME: exampledb
+      WORDPRESS_DB_USER: wpuser
+      WORDPRESS_DB_PASSWORD: wppassword
+      WORDPRESS_DB_NAME: wordpress
     volumes:
       - wordpress:/var/www/html
+    depends_on:
+      - db
 
   db:
     image: mysql:8.0
     restart: always
     environment:
-      MYSQL_DATABASE: exampledb
-      MYSQL_USER: exampleuser
-      MYSQL_PASSWORD: examplepass
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wpuser
+      MYSQL_PASSWORD: wppassword
+      MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
       - db:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
 
 volumes:
   wordpress:
